Fixed an issue with scroll bar visibility (#52)

--- a/Components/Dropdown.razor.css
+++ b/Components/Dropdown.razor.css
@@ -22,7 +22,7 @@
 
 .dropdown-items {
 	flex-grow: 1;
-	overflow: scroll;
+	overflow-y: auto;
 	max-height: 14rem;
 }
 
